--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <title>React Components</title>
   <link rel="stylesheet" href="/index.css" />
+  <style type="text/css">
+    html, body { width: 100%; height: 100%; background: #EEEEEE; }
+    body { display: flex; justify-content: center; align-items: center; }
+    #example { box-sizing: border-box; padding: 24px; width: 375px; height: 600px; background: #FFFFFF; overflow-y: auto; }
+  </style>
 </head>
 <body>
   <div id="example"></div>
